Fix contracts and deploy

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint:ts:fix": "eslint --ext .ts . --fix",
     "lint:sol": "solhint -f table '{contracts,test}/**/*.sol' && prettier --check './contracts/**/*.sol'",
     "lint:sol:fix": "prettier --write './contracts/**/*.sol'",
-    "migrate:mainnet": "hardhat deploy --network mainnet",
+    "migrate:mainnet": "hardhat deploy --network hardhat",
     "migrate:goerli": "hardhat deploy --network goerli",
     "migrate:scrollSepolia": "hardhat deploy --network scrollSepolia",
     "migrate:scrollMainnet": "hardhat deploy --network scrollMainnet",
@@ -57,11 +57,11 @@
     "verify:mantleTestnet": "hardhat verify-by-name --network mantleTestnet --contracts",
     "verify:mantaMainnet": "hardhat verify-by-name --network mantaMainnet --contracts Rubyscore_Deposit",
     "verify:baseMainnet": "hardhat verify-by-name --network baseMainnet --contracts Rubyscore_Deposit",
-    "verify:baseSepolia": "hardhat verify-by-name --network baseSepolia --contracts SingleRouter SingleIdentifierID SingleIdentifierRegistry SameChainConnector LayerZeroConnector HyperlaneConnector",
+    "verify:baseSepolia": "hardhat verify-by-name --network baseSepolia --contracts SingleIdentifierRegistry",
     "verify:taikoTestnet": "hardhat verify-by-name --network taikoTestnet --contracts Rubyscore_Deposit",
     "verify:taikoMainnet": "hardhat verify-by-name --network taikoMainnet --contracts Rubyscore_Deposit",
     "verify:berachainTestnet": "hardhat verify-by-name --network berachainTestnet --contracts Rubyscore_Deposit",
-    "verify:optimismSepolia": "hardhat verify-by-name --network optimismSepolia --contracts HyperlaneConnector",
+    "verify:optimismSepolia": "hardhat verify-by-name --network optimismSepolia --contracts SingleRouter,SingleIdentifierID,SingleIdentifierRegistry,SameChainConnector,LayerZeroConnector,HyperlaneConnector",
     "verify:optimismMainnet": "hardhat verify-by-name --network optimismMainnet --contracts Rubyscore_Deposit",
     "verify:lineaTestnet": "hardhat verify-by-name --network lineaTestnet --contracts Rubyscore_Deposit",
     "verify:lineaMainnet": "hardhat verify-by-name --network lineaMainnet --contracts Rubyscore_Deposit",
@@ -121,6 +121,7 @@
     "@layerzerolabs/lz-evm-messagelib-v2": "^3.0.6",
     "@layerzerolabs/lz-evm-oapp-v2": "^3.0.6",
     "@layerzerolabs/lz-evm-protocol-v2": "^2.3.43",
+    "@uma/contracts-node": "^0.4.25",
     "add": "^2.0.6",
     "ethers": "^6.13.4",
     "jiti": "^2.4.0",
