--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ artifacts
 typechain
 typechain-types
 
+# Foundry files
+/out
+/broadcast
+/cache_forge
+
 # Tests
 coverage
 coverage.json
@@ -22,3 +27,8 @@ package-error.log
 # Ignore all .env files except .env.example
 .env*
 !.env.example
+
+# NixOS devenv files
+/.direnv
+.envrc
+flake.lock
