--- a/package.json
+++ b/package.json
@@ -71,9 +71,11 @@
     "verify": "hardhat verify-by-name --network bscTestnet --contracts"
   },
   "devDependencies": {
+    "@layerzerolabs/test-devtools-evm-foundry": "^6.0.0",
     "@layerzerolabs/test-devtools-evm-hardhat": "^0.5.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.4",
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-foundry": "^1.1.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.4",
