--- a/foundry.toml
+++ b/foundry.toml
@@ -4,6 +4,7 @@ out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test-forge'
 cache_path  = 'cache_forge'
+evm_version = 'london'
 
 [rpc_endpoints]
 mainnet = "https://mainnet.infura.io/v3/${INFURA_KEY}"
